--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
                 <div class="input-field">
                     <i class="fa-solid fa-user"></i>
                     <label for="name">Name</label>
-                    <input required type="text" id="name" name="name" placeholder="Name">
+                    <input required type="text" id="name" name="name">
                 </div>
                 <div class="input-field">
                     <i class="fa-solid fa-user"></i>
                     <label for="email">Email</label>
-                    <input required type="email" id="email" name="email" placeholder="Email">
+                    <input required type="email" id="email" name="email">
                 </div>
                 <div class="input-field">
                     <i class="fa-solid fa-user"></i>
                     <label for="password">Password</label>
-                    <input required type="password" id="password" name="password" placeholder="Password">
+                    <input required type="password" id="password" name="password">
                 </div>
                 <div class="input-field">
                     <i class="fa-solid fa-user"></i>
                     <label for="dob">Date of Birth</label>
-                    <input required type="date" id="dob" name="dob" placeholder="Date of Birth">
+                    <input required type="date" id="dob" name="dob">
                 </div>
                 <div class="cb-field">                             
                     <input required type="checkbox" id="acceptTerms" name="acceptTerms">
